generated/tis100Parser.py
# Generated from /Users/johan/PycharmProjects/pythonProject/ANTLR4/tis100.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class tis100Parser ( Parser ):

    grammarFileName = "tis100.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'!'", "':'", "'ADD'", "'SUB'", "'MOV'", 
                     "','", "'JEZ'", "'JGZ'", "'JLZ'", "'JMP'", "'SAV'", 
                     "'SWP'", "'NOP'", "'ACC'", "'UP'", "'DOWN'", "'DAT'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Constant", "Identifier", 
                      "Comment", "Whitespace", "Newline" ]

    RULE_program = 0
    RULE_line = 1
    RULE_breakpoint = 2
    RULE_label = 3
    RULE_instruction = 4
    RULE_addInstruction = 5
    RULE_subInstruction = 6
    RULE_moveInstruction = 7
    RULE_conditional = 8
    RULE_equalsCondition = 9
    RULE_greaterCondition = 10
    RULE_lessCondition = 11
    RULE_memoryInstruction = 12
    RULE_jumpInstruction = 13
    RULE_saveInstruction = 14
    RULE_swapInstruction = 15
    RULE_noOperation = 16
    RULE_operand = 17
    RULE_accumulatorOperand = 18
    RULE_upOperand = 19
    RULE_downOperand = 20
    RULE_dataOperand = 21

    ruleNames =  [ "program", "line", "breakpoint", "label", "instruction", 
                   "addInstruction", "subInstruction", "moveInstruction", 
                   "conditional", "equalsCondition", "greaterCondition", 
                   "lessCondition", "memoryInstruction", "jumpInstruction", 
                   "saveInstruction", "swapInstruction", "noOperation", 
                   "operand", "accumulatorOperand", "upOperand", "downOperand", 
                   "dataOperand" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    Constant=18
    Identifier=19
    Comment=20
    Whitespace=21
    Newline=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(tis100Parser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tis100Parser.LineContext)
            else:
                return self.getTypedRuleContext(tis100Parser.LineContext,i)


        def getRuleIndex(self):
            return tis100Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = tis100Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4997050) != 0):
                self.state = 44
                self.line()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(tis100Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self):
            return self.getTypedRuleContext(tis100Parser.LabelContext,0)


        def instruction(self):
            return self.getTypedRuleContext(tis100Parser.InstructionContext,0)


        def Newline(self):
            return self.getToken(tis100Parser.Newline, 0)

        def breakpoint(self):
            return self.getTypedRuleContext(tis100Parser.BreakpointContext,0)


        def getRuleIndex(self):
            return tis100Parser.RULE_line

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = tis100Parser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 52
                self.breakpoint()


            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18, 19]:
                self.state = 55
                self.label()
                pass
            elif token in [3, 4, 5, 7, 8, 9, 10, 11, 12, 13]:
                self.state = 56
                self.instruction()
                pass
            elif token in [22]:
                self.state = 57
                self.match(tis100Parser.Newline)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakpointContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tis100Parser.RULE_breakpoint

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakpoint" ):
                return visitor.visitBreakpoint(self)
            else:
                return visitor.visitChildren(self)




    def breakpoint(self):

        localctx = tis100Parser.BreakpointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_breakpoint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(tis100Parser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(tis100Parser.Identifier, 0)

        def Constant(self):
            return self.getToken(tis100Parser.Constant, 0)

        def instruction(self):
            return self.getTypedRuleContext(tis100Parser.InstructionContext,0)


        def getRuleIndex(self):
            return tis100Parser.RULE_label

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = tis100Parser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_label)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            _la = self._input.LA(1)
            if not(_la==18 or _la==19):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 63
            self.match(tis100Parser.T__1)
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 64
                self.instruction()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addInstruction(self):
            return self.getTypedRuleContext(tis100Parser.AddInstructionContext,0)


        def subInstruction(self):
            return self.getTypedRuleContext(tis100Parser.SubInstructionContext,0)


        def moveInstruction(self):
            return self.getTypedRuleContext(tis100Parser.MoveInstructionContext,0)


        def conditional(self):
            return self.getTypedRuleContext(tis100Parser.ConditionalContext,0)


        def memoryInstruction(self):
            return self.getTypedRuleContext(tis100Parser.MemoryInstructionContext,0)


        def jumpInstruction(self):
            return self.getTypedRuleContext(tis100Parser.JumpInstructionContext,0)


        def noOperation(self):
            return self.getTypedRuleContext(tis100Parser.NoOperationContext,0)


        def getRuleIndex(self):
            return tis100Parser.RULE_instruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = tis100Parser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instruction)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.addInstruction()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.subInstruction()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.moveInstruction()
                pass
            elif token in [7, 8, 9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.conditional()
                pass
            elif token in [11, 12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.memoryInstruction()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                self.jumpInstruction()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 7)
                self.state = 73
                self.noOperation()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operand(self):
            return self.getTypedRuleContext(tis100Parser.OperandContext,0)


        def getRuleIndex(self):
            return tis100Parser.RULE_addInstruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddInstruction" ):
                return visitor.visitAddInstruction(self)
            else:
                return visitor.visitChildren(self)




    def addInstruction(self):

        localctx = tis100Parser.AddInstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_addInstruction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(tis100Parser.T__2)
            self.state = 77
            self.operand()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operand(self):
            return self.getTypedRuleContext(tis100Parser.OperandContext,0)


        def getRuleIndex(self):
            return tis100Parser.RULE_subInstruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubInstruction" ):
                return visitor.visitSubInstruction(self)
            else:
                return visitor.visitChildren(self)




    def subInstruction(self):

        localctx = tis100Parser.SubInstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subInstruction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(tis100Parser.T__3)
            self.state = 80
            self.operand()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoveInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tis100Parser.OperandContext)
            else:
                return self.getTypedRuleContext(tis100Parser.OperandContext,i)


        def getRuleIndex(self):
            return tis100Parser.RULE_moveInstruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMoveInstruction" ):
                return visitor.visitMoveInstruction(self)
            else:
                return visitor.visitChildren(self)




    def moveInstruction(self):

        localctx = tis100Parser.MoveInstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_moveInstruction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(tis100Parser.T__4)
            self.state = 83
            self.operand()
            self.state = 84
            self.match(tis100Parser.T__5)
            self.state = 85
            self.operand()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equalsCondition(self):
            return self.getTypedRuleContext(tis100Parser.EqualsConditionContext,0)


        def greaterCondition(self):
            return self.getTypedRuleContext(tis100Parser.GreaterConditionContext,0)


        def lessCondition(self):
            return self.getTypedRuleContext(tis100Parser.LessConditionContext,0)


        def getRuleIndex(self):
            return tis100Parser.RULE_conditional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional" ):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)




    def conditional(self):

        localctx = tis100Parser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_conditional)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.equalsCondition()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.greaterCondition()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.lessCondition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualsConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(tis100Parser.Identifier, 0)

        def Constant(self):
            return self.getToken(tis100Parser.Constant, 0)

        def getRuleIndex(self):
            return tis100Parser.RULE_equalsCondition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualsCondition" ):
                return visitor.visitEqualsCondition(self)
            else:
                return visitor.visitChildren(self)




    def equalsCondition(self):

        localctx = tis100Parser.EqualsConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_equalsCondition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(tis100Parser.T__6)
            self.state = 93
            _la = self._input.LA(1)
            if not(_la==18 or _la==19):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GreaterConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(tis100Parser.Identifier, 0)

        def Constant(self):
            return self.getToken(tis100Parser.Constant, 0)

        def getRuleIndex(self):
            return tis100Parser.RULE_greaterCondition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGreaterCondition" ):
                return visitor.visitGreaterCondition(self)
            else:
                return visitor.visitChildren(self)




    def greaterCondition(self):

        localctx = tis100Parser.GreaterConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_greaterCondition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(tis100Parser.T__7)
            self.state = 96
            _la = self._input.LA(1)
            if not(_la==18 or _la==19):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LessConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(tis100Parser.Identifier, 0)

        def Constant(self):
            return self.getToken(tis100Parser.Constant, 0)

        def getRuleIndex(self):
            return tis100Parser.RULE_lessCondition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessCondition" ):
                return visitor.visitLessCondition(self)
            else:
                return visitor.visitChildren(self)




    def lessCondition(self):

        localctx = tis100Parser.LessConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_lessCondition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(tis100Parser.T__8)
            self.state = 99
            _la = self._input.LA(1)
            if not(_la==18 or _la==19):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemoryInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def saveInstruction(self):
            return self.getTypedRuleContext(tis100Parser.SaveInstructionContext,0)


        def swapInstruction(self):
            return self.getTypedRuleContext(tis100Parser.SwapInstructionContext,0)


        def getRuleIndex(self):
            return tis100Parser.RULE_memoryInstruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemoryInstruction" ):
                return visitor.visitMemoryInstruction(self)
            else:
                return visitor.visitChildren(self)




    def memoryInstruction(self):

        localctx = tis100Parser.MemoryInstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_memoryInstruction)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.saveInstruction()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.swapInstruction()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JumpInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(tis100Parser.Identifier, 0)

        def Constant(self):
            return self.getToken(tis100Parser.Constant, 0)

        def getRuleIndex(self):
            return tis100Parser.RULE_jumpInstruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJumpInstruction" ):
                return visitor.visitJumpInstruction(self)
            else:
                return visitor.visitChildren(self)




    def jumpInstruction(self):

        localctx = tis100Parser.JumpInstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_jumpInstruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(tis100Parser.T__9)
            self.state = 106
            _la = self._input.LA(1)
            if not(_la==18 or _la==19):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaveInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tis100Parser.RULE_saveInstruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSaveInstruction" ):
                return visitor.visitSaveInstruction(self)
            else:
                return visitor.visitChildren(self)




    def saveInstruction(self):

        localctx = tis100Parser.SaveInstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_saveInstruction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(tis100Parser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwapInstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tis100Parser.RULE_swapInstruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwapInstruction" ):
                return visitor.visitSwapInstruction(self)
            else:
                return visitor.visitChildren(self)




    def swapInstruction(self):

        localctx = tis100Parser.SwapInstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_swapInstruction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(tis100Parser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NoOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tis100Parser.RULE_noOperation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNoOperation" ):
                return visitor.visitNoOperation(self)
            else:
                return visitor.visitChildren(self)




    def noOperation(self):

        localctx = tis100Parser.NoOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_noOperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(tis100Parser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def accumulatorOperand(self):
            return self.getTypedRuleContext(tis100Parser.AccumulatorOperandContext,0)


        def upOperand(self):
            return self.getTypedRuleContext(tis100Parser.UpOperandContext,0)


        def downOperand(self):
            return self.getTypedRuleContext(tis100Parser.DownOperandContext,0)


        def dataOperand(self):
            return self.getTypedRuleContext(tis100Parser.DataOperandContext,0)


        def Identifier(self):
            return self.getToken(tis100Parser.Identifier, 0)

        def Constant(self):
            return self.getToken(tis100Parser.Constant, 0)

        def getRuleIndex(self):
            return tis100Parser.RULE_operand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperand" ):
                return visitor.visitOperand(self)
            else:
                return visitor.visitChildren(self)




    def operand(self):

        localctx = tis100Parser.OperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_operand)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.accumulatorOperand()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.upOperand()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.downOperand()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 117
                self.dataOperand()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 5)
                self.state = 118
                self.match(tis100Parser.Identifier)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 6)
                self.state = 119
                self.match(tis100Parser.Constant)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccumulatorOperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tis100Parser.RULE_accumulatorOperand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccumulatorOperand" ):
                return visitor.visitAccumulatorOperand(self)
            else:
                return visitor.visitChildren(self)




    def accumulatorOperand(self):

        localctx = tis100Parser.AccumulatorOperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_accumulatorOperand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(tis100Parser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpOperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tis100Parser.RULE_upOperand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpOperand" ):
                return visitor.visitUpOperand(self)
            else:
                return visitor.visitChildren(self)




    def upOperand(self):

        localctx = tis100Parser.UpOperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_upOperand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(tis100Parser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DownOperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tis100Parser.RULE_downOperand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDownOperand" ):
                return visitor.visitDownOperand(self)
            else:
                return visitor.visitChildren(self)




    def downOperand(self):

        localctx = tis100Parser.DownOperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 40, self.RULE_downOperand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(tis100Parser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataOperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tis100Parser.RULE_dataOperand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataOperand" ):
                return visitor.visitDataOperand(self)
            else:
                return visitor.visitChildren(self)




    def dataOperand(self):

        localctx = tis100Parser.DataOperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 42, self.RULE_dataOperand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(tis100Parser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





